Squashed commit for replica plugin
[AMQ-8354] Add initial plugin skeleton

[AMQ-8354] Replica Broker can connect to source broker

[AMQ-8354] Replication of destination creation and removal

[AMQ-8354] Replication of message send

[AMQ-8354] Replication of purge queue and acknowledge message

[AMQ-8354] Replication of transaction begin, prepare, forget, rollback, commit

[AMQ-8354] stop taskRunner on broker stop

[AMQ-8354] Ensure destinations are replicated on startup

[AMQ-8354] Isolate the replication queue by letting to add consumers and producers only via the replication transport.

[AMQ-8354] Support of durable subscribers

[AMQ-8354] Test of replication of virtual topics and expired messages.

[AMQ-8354] More tests for ReplicaSourceBroker

AMQ-8354 Add scheduled messages support to the replica plugin

[AMQ-8354] Move ReplicaBroker before ReplicaSourceBroker.
Add missed try-catch in replicateDestinationCreation.
Bug fix: not deleting destination from the list of destination to replicate when deleting the destination.

[AMQ-8354] Atomic send message on primary broker

[AMQ-8354] Different implementation of ack replication.

[AMQ-8354] Add the license

[AMQ-8354] Add exponential replica retries.

[AMQ-8354]
Add an intermediate replication queue.
Make the main replication queue non-persistent.
Add logic for adding and checking sequences on both sides.

[AMQ-8354] Add batches for main replication queue.

[AMQ-8354] Add compaction logic for send and ack events that cancel each other out.

[AMQ-8354] Do not send messages to mainQueue if there are no consumers to apply message compaction on the main queue.

[AMQ-8354]
Increased the size of batches.
Made batches idempotent.

[AMQ-8354] Add message compaction when there is no consumer.

[AMQ-8354] Add replica batch acknowledge.

[AMQ-8354]
Split threads for ack and for send.
Added logic to ignore Delivered and Unmatched acks.

[AMQ-8354] Improve Batcher to make batches bigger.

[AMQ-8354]
Reduce the delay between acks.

--- a/activemq-unit-tests/pom.xml
+++ b/activemq-unit-tests/pom.xml
@@ -293,6 +293,12 @@
       <artifactId>mockito-inline</artifactId>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.eclipse.paho</groupId>
+          <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+          <version>1.2.1</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <reporting>
@@ -1159,6 +1165,27 @@
                   </plugin>
               </plugins>
           </build>
+      </profile>
+      <profile>
+        <id>activemq.tests-replica-plugin</id>
+        <activation>
+          <property>
+            <name>activemq.tests</name>
+            <value>replica-plugin</value>
+          </property>
+        </activation>
+        <build>
+          <plugins>
+            <plugin>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <includes>
+                  <include>**/replica/*Test.*</include>
+                </includes>
+              </configuration>
+            </plugin>
+          </plugins>
+        </build>
       </profile>
   </profiles>
 </project>
