Revert "[AMQ-9234] Remove JournalJDBC store and activeio dependency (#993)"
This reverts commit 0681bfbd41eef61acdbb72db287d9fbb9744984d.

--- a/activemq-mqtt/pom.xml
+++ b/activemq-mqtt/pom.xml
@@ -41,6 +41,11 @@
     </dependency>
 
     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>activeio-core</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>org.apache.activemq.protobuf</groupId>
       <artifactId>activemq-protobuf</artifactId>
       <optional>false</optional>
