--- a/activemq-spring/pom.xml
+++ b/activemq-spring/pom.xml
@@ -69,6 +69,11 @@
       <artifactId>activemq-kahadb-store</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>activeio-core</artifactId>
+      <optional>true</optional>
+    </dependency>
     
     <!-- add the optional replication deps -->
     <dependency>
