--- a/activemq-console/pom.xml
+++ b/activemq-console/pom.xml
@@ -49,6 +49,10 @@
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-kahadb-store</artifactId>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>activeio-core</artifactId>
+    </dependency>
 
     <!-- geronimo -->
     <dependency>
