--- a/activemq-osgi/pom.xml
+++ b/activemq-osgi/pom.xml
@@ -174,6 +174,7 @@
               javax.resource*;resolution:=optional,
               javax.servlet*;resolution:=optional,
               com.thoughtworks.xstream*;resolution:=optional,
+              org.apache.activeio*;resolution:=optional,
               org.apache.camel*;version="${camel-version-range}";resolution:=optional,
               org.apache.camel.spring.handler;version="${camel-version-range}";resolution:=optional,
               org.apache.camel.spring.xml.handler;version="${camel-version-range}";resolution:=optional,
