--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -39,6 +39,10 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>activeio-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>activemq-client</artifactId>
     </dependency>
     <dependency>
